Add sample data; Cookie contains multiple authorities